Adicionado componentes Tasklist

--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -3,3 +3,10 @@
   max-width: 720px;
   margin: 0 auto;
 }
+
+.app__tasks-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    gap: 30px;
+}
